src/browser/extensions/shared/src/css/theme-default.css
/** theme-default.css --- Default theme used by Sorting Desk
 *
 * Copyright (C) 2015 Diffeo
 *
 * Comments:
 *
 * Uses the free "100 External Link Icons" pack by Oksana Khristenko available
 * online at http://www.shapes4free.com/vector-icons/external-link-icons/
 * (accessed 30/12/2014).
 */

/*csslint adjoining-classes: false, important: false */


/* Default settings */
BODY {
  margin: 0;
  padding: 0;
}

/* Common default settings */
.sd-container {
  position: fixed;
  font-family: arial,sans-serif;
  font-size: 12px;
  color: black;
}

.sd-container-inner {
  background-color: transparent;
}

/* Master container */
#sd-sorting-desk {
  min-width: 330px;
  width: 100%;
  box-sizing: border-box;
}

/* Container of bins and queue */
#sd-sorter {
  display: block;
  border: 2px solid #ccc;
  background-color: white;
  background: linear-gradient(to bottom, rgba(255,255,255,1) 0%, rgba(237,237,237,1) 40%, rgba(235,235,235,1) 100%);
}

#sd-explorer {
  position: relative;
  top: -2px;
}

/* Various */
#sd-sorting-desk {
  overflow: hidden;
  white-space: nowrap;
  border-bottom: 1px solid silver;
}

.sd-panel {
  position: relative;
  overflow: hidden;
}

.sd-panel > .sd-header,
.sd-panel > .sd-footer {
  padding: 5px;
  border-radius: 0;
  height: 43px;
}

.sd-panel > .sd-header > H1,
.sd-panel > .sd-footer > H1 {
  font-size: 13px;
}

.sd-panel > .sd-header > .sd-header-title,
.sd-panel > .sd-footer > .sd-footer-title {
  margin-top: 7px;
}

#sd-queue {
  position: relative;
  overflow-y: auto;
}

.sd-clear {
  height: 0;
  clear: both;
}

.sd-loading {
  display: none;
  position: absolute;
  top: 135px;
  color: black;
  opacity: .7;
  height: 80px;
  width: 80px;
  margin-left: 50%;
  left: -40px;
}

.sd-empty {
  display: none;
  position: absolute;
  top: 150px;
  left: -100px;
  margin-left: 50%;
  width: 200px;
  color: gray;
  font-size: 13px;
  text-align: center;
  text-shadow: 1px 1px 1px rgba(150, 150, 150, .75);
  white-space: normal;
}

.sd-empty.sd-wider {
  left: -150px;
  width: 300px;
}

.sd-empty > .sd-hint {
  margin-top: 25px;
  padding: 9px;
  border: 1px solid #DDD;
  border-radius: 4px;
  background-color: #F9F8E9;
  color: #555;
  text-shadow: 1px 1px 1px #dadada;
  box-shadow: 1px 1px 1px #888;
}


/* ----------------------------------------------------------------------
 *  Sorting Desk
 * ---------------------------------------------------------------------- */
/* Text item */
.sd-text-item {
  position: relative;
  margin: 15px 5px;
  padding: 10px;
  background-color: #FFFFFA;
  border: 1px solid #ccc;
  color: #242922;
  text-align: justify;
  font-size: 12px;
  cursor: default;
  line-height: 15px;
  box-shadow: 1px 1px 1px 2px rgba(0,0,0,0.1);
}

.sd-text-item B:not(:first-child),
.sd-text-item STRONG:not(:first-child) {
  padding-left: 10px;
}

.sd-text-item-content {
  overflow: hidden;
}

.sd-text-item-title {
  color: #565656;
  font-size: 14px;
  margin: 0 0 8px 0;
  font-weight: bold;
  text-overflow: ellipsis;
  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25);
}

.sd-text-item-description {
  font-size: 12px;
  margin: 0;
}

.sd-text-item-url {
  margin: 8px 0 0 0;
}

.sd-text-item-score {
  margin: 8px 0 0 0;
}

.sd-dict-score > :not(:first-child) {
  margin-left: 5px;
}

.sd-dict-score > :not(:first-child):not(:last-child) {
  color: #555;
}

.sd-text-item-content > P {
  white-space: normal;
}

.sd-text-item-content A {
  color: #0b9dcc;
  transition: all .2s ease;
}

.sd-text-item-content A:hover {
  color: #85b7e4;
  text-decoration: underline;
}

.sd-text-item-content A:visited {
  color: #1153ab;
}

A.sd-text-item-title {
  position: absolute;
  top: -12px;
  background-color: white;
  padding: 2px 8px 2px 8px;
  display: block;
  text-decoration: none;
  color: #2D5C8B;
  border-radius: 6px;
}

.sd-text-item:hover .sd-text-item-close,
.sd-text-item.sd-selected .sd-text-item-close {
  display: block;
  opacity: 1;
}

.sd-text-item-close {
  position: absolute;
  top: -8px;
  right: -6px;
  background-color: white;
  padding: 5px 4px 5px 5px;
  display: none;
  text-decoration: none;
  border: 1px solid silver;
  border-radius: 12px;
  line-height: 7px;
  box-shadow: 1px 1px 1px 0 rgba(50, 50, 50, 0.75);
  transition: all 200ms;
}

.sd-text-item-close,
.sd-text-item-close:visited {
  color: grey !important;
}

.sd-text-item-close:hover {
  color: black;
  background-color: #ececec;
  text-decoration: none;
}

.sd-text-item-close:active {
  background-color: #eee;
}

.sd-text-item.sd-dragging {
  border-color: #eee !important;
  color: silver !important;
  background-color: inherit !important;
}

.sd-dict-container {
  max-height: 35px;
  margin: 8px 0 8px 8px;
  padding: 5px;
  border: 1px solid #ccc;
  background-color: #fcfcfc;
  clear: both;
  transition: all 0.25s ease;
  overflow: hidden;
}

.sd-dict-container.sd-active {
  overflow-y: auto;
  overflow-x: hidden;
  max-height: 200px;
}

.sd-dict-values {
  clear: both;
}

.sd-dict-values > UL {
  flex-wrap: wrap;
  display: flex;
  list-style: none;
  padding: 0;
  margin: 0;
  justify-content: center;
}

.sd-dict-values > UL LI {
  display: inline;
  margin-right: 9px;
}

.sd-dict-values > UL LI:hover {
  color: #666;
  text-shadow: 1px 1px 1px silver;
}

.sd-dict-more {
  float: right;
}

.sd-dict-more.sd-active > A::after {
  content: "less";
}

.sd-dict-more > A::after {
  content: "more";
}

.sd-dict-more >:first-child {
  font-size: 80%;
  margin-right: 3px;
  color: #666;
  transition: all .2s ease-in;
}

.sd-dict-more-icon {
  position: absolute;
  margin-left: -10px;
}

.sd-dict-more >.sd-dict-more-icon:before {
  content: "\25b6";
}

.sd-dict-more.sd-active >.sd-dict-more-icon {
  transform: rotate(90deg);
}

.sd-dict-more A {
  text-decoration: none;
  color: #475979;
  transition: all .2s ease;
}

.sd-dict-more A:hover {
  text-decoration: none;
  color: #7490c2;
}

/* Dismissal */
.sd-dismissal {
  margin: 0 0 12px 0;
  white-space: normal;
  word-break: break-word;
  text-align: left;
}

.sd-dismissal-replace-tight.sd-dismissal {
  margin: 0;
}

.sd-dismissal-question {
  font-size: 16px;
  font-weight: bold;
  text-shadow: 2px 2px 2px #6e7073;
}

.sd-dismissal-replace-tight .sd-dismissal-question {
  font-size: 14px;
  text-shadow: 1px 1px 1px #6e7073;
}

.sd-dismissal-description {
  font-size: 14px;
  text-shadow: 1px 1px 1px #6e7073;
}

.sd-dismissal-options {
  width: 100%;
}

.sd-dismissal-options TR {
}

.sd-dismissal-options TD {
  width: 50%;
  vertical-align: middle;
}

.sd-dismissal-option {
  display: inline-block;
  width: 93%;
  margin: 5px 0 5px 0;
  padding: 8px;
  border: 2px solid #6ecff0;
  border-radius: 0;

  font-size: 13.5px;
  color: white;
  text-align: center;
  text-shadow: 1px 1px 1px #6e7073;
}

.sd-dismissal-replace-tight .sd-dismissal-option {
  padding: 3px 8px 3px 8px;
}

.sd-dismissal-option:hover,
.sd-dismissal-option:focus {
  background-color: #6ecff0;
  cursor: pointer;
}

.sd-dismissal-option:active {
  background-color: #92dff9;
}

.sd-dismissal-dismissing,
.sd-dismissal-dismissing:hover {
  background-color: #0b9dcc;
  border-color: #75bfe5;
  color: white;
}

.sd-dismissal-brief {
  overflow: hidden;
  margin: 0;
  font-size: 14px;
  font-weight: bold;
  text-overflow: ellipsis;
  text-shadow: 1px 1px 1px #276688;
}


/* Droppable elements */
.sd-droppable {
  border: 2px dashed gray;
}

.sd-droppable-highlight {
  border: 2px dashed gray;
}

.sd-droppable-hover {
  border: 2px dotted gray !important;
  background-color: #f2f7fd !important;
}


/* Styling common to components */
.sd-container.sd-component {
  top: 100px;
  left: 100px;
  opacity: 0;
  display: block;
  width: 400px;
  height: 400px;
  background-color: white;
  border: 5px solid silver;
  border-radius: 15px;
  transform: scale(0.2,0.2);
  transition: transform 300ms ease-in-out, opacity 150ms ease-in;

  /* box-shadow */
  -webkit-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.4);
  -moz-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.4);
  box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.4);
}

.sd-header, .sd-footer {
  position: relative;

  padding: 10px 5px 8px 5px;
  margin: 0;

  border: 1px solid #dbdbdb;

  color: #333;
  background-color: #e5e4ef;
  background: linear-gradient(to bottom, rgba(232,232,235,1) 0%, rgba(204,202,204,1) 59%, rgba(212,210,212,1) 100%);
  text-shadow: 1px 1px 2px #aaa;
}

.sd-header {
  border-bottom-color: #aaa;
}

.sd-footer {
  border-top-color: #aaa;
}

.sd-footer {
  position: fixed;
  bottom: 0px;
  width: 100%;
}

.sd-header-title,
.sd-footer-title {
  font-size: 16px;
  font-weight: bold;
  font-family: arial,sans-serif;
  line-height: 16px;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  border: none;
  margin: 0 0 5px 0;
  padding: 0;
}

.sd-container-view-outer {
  overflow: auto;
  margin: 5px;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.sd-container-view-outer.sd-panel-top {
  top: 44px;
}

.sd-container-view {
  overflow: auto;
}

.sd-button-close {
  position: absolute;
  top: -12px;
  right: -12px;
  width: 20px;
  height: 20px;
  background-color: white;
  border: 1px solid grey;
  border-radius: 10px;
  text-align: center;
  font-size: 13px;
  line-height: 19px;
  box-shadow: 1px 1px 2px 0 rgba(50, 50, 50, 0.75);
  cursor: pointer;
  transition: all 200ms;
}

.sd-button-close:hover {
  background-color: #ececec;
}


/* Toolbar & buttons */
.sd-toolbar {
  float: right;
}

.sd-toolbar BUTTON {
/*   background-image: linear-gradient(#fcfcfc, #eee); */
}

.sd-toolbar BUTTON:hover {
/*   background-image: linear-gradient(#eee, #ddd); */
}


/* Folder Explorer */
#sd-folder-explorer {
  white-space: nowrap;
  vertical-align: middle;
  border-bottom: 1px solid silver;
}

/* Hack for JsTree. */
#sd-folder-explorer .sd-container-view {
  overflow: hidden;
}

#sd-folder-explorer .sd-loading {
  top: 173px;
}

#sd-folder-explorer .sd-empty {
  top: 193px;
}

.sd-folder {
  background: url('../../media/images/folder-root.png') 0 0 no-repeat !important;
}

.sd-subfolder {
  background: url('../../media/images/folder-sub.png') 0 0 no-repeat !important;
}

.jstree LI.sd-active {
  border: 1px solid #ACDBB9;
}

.jstree LI.sd-active,
.jstree LI.sd-active > A.jstree-hovered {
  background-color: #E4FAE7;
  color: #396121;
  font-weight: bold;
}

.jstree LI.sd-active[aria-selected="true"],
.jstree LI.sd-active[aria-selected="true"] > A {
  background-color: #E4F4FA !important;
  color: #212C61 !important;
}

.vakata-context {
  font-size: 12px;
}

